# pronouncer

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
pronouncer_bin/: Cargo.toml
pronouncer_bin/src/: main.rs
pronouncer_lib/: Cargo.toml  build.rs
pronouncer_lib/src/: lib.rs  phoneme.rs
src/: main.rs  phoneme.rs
