[package]
name = "pronouncer"
version = "0.1.0"
authors = ["CoolOppo <CoolOppo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cmudict = "0.3.2"
rayon = "1.0.3"
hashbrown = {version = "0.1", features=["nightly", "serde"]}
parking_lot = {version = "0.7.1", features=["nightly"]}
serde = "1.0.85"
serde_derive = "1.0.85"
bincode = "1.0.1"
[profile.release]
lto = 'thin'