[package]
name = "pronouncer"
version = "0.1.0"
authors = ["CoolOppo <CoolOppo@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
bincode = "1.0.1"
hashbrown = {version = "0.1", features=["nightly", "serde"]}
serde = "1.0.85"
serde_derive = "1.0.85"
[dependencies]
bincode = "1.0.1"
hashbrown = {version = "0.1", features=["nightly", "serde"]}
lazy_static = "*"
libc = "0.2.48"
serde = "1.0.85"
serde_derive = "1.0.85"
hound = "3.4.0"
pronouncer_lib = {path ="../pronouncer_lib"}
[profile.release]
lto = 'thin'
